feat: added env var for influxdb bucket

--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
-PLUG_NAME=name_that_identifies_this_plug
+PLUG_NAME=name_here
 
 TAPO_IP_ADDR=192.168.1.xxx
 TAPO_EMAIL=your@email.here
@@ -6,4 +6,5 @@ TAPO_PASSWORD=hunter2
 
 INFLUXDB_V2_URL=http://192.168.1.xxx:8086
 INFLUXDB_V2_ORG=org
-INFLUXDB_V2_TOKEN="token"
+INFLUXDB_V2_BUCKET=bucket
+INFLUXDB_V2_TOKEN=token
